# nareuGo

./: .gitignore  .gitlab-ci-backend.yml  .gitlab-ci-frontend.yml  .gitlab-ci.yml  et --hard 25756bc  gitlab-ci-backend.yml  gitlab-ci-frontend.yml  gitlab-ci.yml  package-lock.json
.gitlab/merge_request_templates/: default.md
Embedded/: buyer_notification_example.html  fix_scale_world.py  frames_2025-09-14_23.57.40.gv  generate_robot_url.py  restore_turtlebot.py  scale_world.py  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
Embedded/config/: nav2_params.yaml
Embedded/install/: local_setup.sh  setup.sh
Embedded/log/: latest_build  latest_list
Embedded/src/: apt_door_ctrl.py  autonomous_navigation.py  delivery.py  elevator_ctrl.py  go_room.py  robot_deliver.py  robot_deliver_local.py
Embedded/src/Plugin/: AptDoorRos2Plugin.cpp  BoxControlPlugin.cpp  CoordinatorRos2Plugin.cpp  DisplayMarkerRos2Plugin.cpp  ElevatorRos2Plugin.cpp  StorageDoorRos2Plugin.cpp
Embedded/src/app_navigation/: setup.py
Embedded/src/install/: local_setup.sh
Embedded/src/robot_web_interface/: setup.py
Embedded_backup/: image_processing.ipynb  scale_turtlebot.py
Embedded_backup/install/: local_setup.sh  setup.sh
Embedded_backup/src/: set_initial_pose.py
Embedded_backup/src/Plugin/: ElevatorRos2Plugin.cpp  PanelDisplayRos2Plugin.cpp
Embedded_backup/src/install/: setup.sh
Embedded_backup/src/log/: latest_build~HEAD
Embedded_backup/src/robot_web_interface/: setup.cfg
Embedded_backup/src/turtlebot3_simulations/turtlebot3_manipulation_gazebo/: CMakeLists.txt
Embedded_backup/src/turtlebot3_simulations/turtlebot3_manipulation_gazebo/install/: setup.bash  setup.sh
Embedded_backup/src/turtlebot3_simulations/turtlebot3_manipulation_gazebo/log/: latest_build
Embedded_backup/src/turtlebot3_simulations/turtlebot3_manipulation_gazebo/models/small_red_box/: model.sdf
Embedded_backup/src/turtlebot3_simulations/turtlebot3_manipulation_gazebo/urdf/: turtlebot3_waffle_pi.urdf.xacro
Embedded_backup/src/turtlebot3_simulations/turtlebot3_manipulation_gazebo/worlds/: outer.world
FrontEnd/: .env.development  .gitignore  check_localstorage.js  index.html  package-lock.json  package.json  vite.config.js
FrontEnd/public/: firebase-messaging-sw.js  manifest.json  sw.js
FrontEnd/src/: App.vue  main.js
FrontEnd/src/api/: auth.js  client.js  fcmService.js
FrontEnd/src/components/: AppHeader.vue  AppHeader_backup.vue  AppHeader_updated.vue  BottomButtons.vue  BottomNavigation.vue  BuyerPickupModal.vue  DeliveryBottomButtons.vue  DeliveryCards.vue  DeliveryDetailModal.vue  DeliveryStartModal.vue  DeliveryStatusHeader.vue  FCMQuickSetup.vue  ItemCard.vue  KakaoMapComponent.vue  MyPageHeader.vue  Navigation.vue  NotificationHandler.vue  RouterExample.vue  SellerPickupModal.vue  (+4 more)
NareuGO _Backend/: build.gradle  settings.gradle
NareuGO_Backend/: .gitignore  Dockerfile  ENV_SETUP_GUIDE.md  build.gradle  orders_table_update.sql  package-lock.json  start_with_robot.sh  test_embedded_scenario.py
NareuGO_Backend/embedded_example/: robot_notification.py  simple_robot_api.py  test_notification.py
(+386 files in other folders)
